--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
     padding: 5px 10px;
     margin-right: 10px;
     border-radius: 5px;
-    background: #30a7d7;
+    background: #0abde9;
     color: #fff;
     font-size: 1em;
 }
